@@ -13,6 +13,7 @@
    <Action name="jump_to_position" />
    <Separator/>
    <Action name="changeremoteencoding" />
+   <Action name="hex_mode" />
   </Menu>
  </MenuBar>
 </kpartgui>
