@@ -1,3 +1,4 @@
+    ADDED: lister: a fast text/hex viewer for Krusader
     ADDED: service menu, thanks to Tomasz Kalkosinski
     ADDED: queued packing / unpacking
     ADDED: lock tabs, close inactive tabs, close duplicated tabs
